Replaced Runtime with proper ProcessBuilder to try to fix problem when running on Linux. Works on windows still as it did before.